# nbdkit

./: .cirrus.yml  .dir-locals.el  .gitignore  .gitlab-ci.yml  BENCHMARKING  LICENSE  Makefile.am  OTHER_PLUGINS  README  README.md  SECURITY  TODO  common-rules.mk  configure.ac  nbdkit.in  podwrapper.pl.in  valgrind-suppressions  wrapper.c
bash/: Makefile.am  README  nbdkit
bash-completion/: Makefile.am  README  nbdkit
ci/: README.rst  build.sh  gitlab.yml  manifest.yml  test-distro.sh
ci/buildenv/: almalinux-8.sh  alpine-315.sh  alpine-edge.sh  centos-stream-8.sh  debian-10.sh  debian-11.sh  debian-sid.sh  fedora-36.sh  (+6 more)
common/include/: Makefile.am  ansi-colours.h  array-size.h  ascii-ctype.h  ascii-string.h  byte-swapping.h  checked-overflow.h  compiler-macros.h  exit-with-parent.h  get-current-dir-name.h  hexdigit.h  isaligned.h  ispowerof2.h  iszero.h  minmax.h  nextnonzero.h  random.h  rounding.h  static-assert.h  test-array-size.c  test-ascii-ctype.c  test-ascii-string.c  test-byte-swapping.c  test-checked-overflow.c  test-current-dir-name.c  test-isaligned.c  test-ispowerof2.c  test-iszero.c  test-minmax.c  test-nextnonzero.c  test-random.c  test-tvdiff.c  tvdiff.h  unique-name.h  unix-path-max.h
common/protocol/: Makefile.am  generate-protostrings.sh.in  nbd-protocol.h  protocol.h  protostrings.h  protostrings.sed
common/utils/: Makefile.am  bench.h  cleanup-nbdkit.c  cleanup.c  cleanup.h  const-string-vector.h  environ.c  exit-with-parent.c  exit-with-parent.h  full-rw.c  nbdkit-string.h  quote.c  string-vector.h  test-quotes.c  test-vector.c  utils.c  utils.h  vector.c  vector.h  windows-compat.c  windows-compat.h  windows-errors.txt
docs/: Makefile.am  make-links.sh  nbdkit-captive.pod  nbdkit-client.pod  nbdkit-filter.pod  nbdkit-filter.pod.in  nbdkit-loop.pod  nbdkit-plugin.pod  nbdkit-plugin.pod.in  nbdkit-probing.pod  nbdkit-protocol.pod  nbdkit-release-notes-1.10.pod  nbdkit-release-notes-1.12.pod  nbdkit-release-notes-1.14.pod  nbdkit-release-notes-1.16.pod  nbdkit-release-notes-1.18.pod  nbdkit-release-notes-1.20.pod  nbdkit-release-notes-1.22.pod  nbdkit-release-notes-1.24.pod  nbdkit-release-notes-1.26.pod  nbdkit-release-notes-1.28.pod  nbdkit-release-notes-1.30.pod  nbdkit-release-notes-1.32.pod  nbdkit-release-notes-1.4.pod  nbdkit-release-notes-1.6.pod  nbdkit-release-notes-1.8.pod  nbdkit-security.pod  nbdkit-service.pod  nbdkit-tls.pod  nbdkit.pod  nbdkit.pod.in  synopsis.txt
filters/: Makefile.am  filters.syms
filters/ddrescue/: Makefile.am  ddrescue.c  nbdkit-ddrescue-filter.pod
fuzzing/: Makefile.am  README
include/: Makefile.am  nbdkit-common.h  nbdkit-filter.h  nbdkit-plugin.h  nbdkit-version.h.in
plugins/: Makefile.am  plugins.syms
plugins/S3/: Makefile.am  S3.py  nbdkit-S3-plugin.pod  nbdkit.py
plugins/eval/: Makefile.am  eval.c  nbdkit-eval-plugin.pod
plugins/example4/: Makefile.am  example4.pl  nbdkit-example4-plugin.in  nbdkit-example4-plugin.pod
plugins/golang/: Makefile.am  config-test.go  dump-plugin-examples.sh  nbdkit-golang-plugin.pod  run-tests.sh
plugins/golang/examples/disk/: disk.go  go.mod
plugins/golang/examples/dump-plugin/: dumpplugin.go
plugins/golang/examples/minimal/: minimal.go
plugins/golang/examples/ramdisk/: ramdisk.go
plugins/golang/src/libguestfs.org/nbdkit/: go.mod  nbdkit.go  utils.go  wrappers.go  wrappers.h
plugins/golang/test/: test.go
plugins/null/: Makefile.am  nbdkit-null-plugin.pod  null.c
plugins/ocaml/: Makefile.am  NBDKit.ml  NBDKit.mli  bindings.c  callbacks.h  example.ml  nbdkit-ocaml-plugin.pod  ocaml.c  plugin.c  plugin.h
plugins/ondemand/: Makefile.am  default-command.sh.in  nbdkit-ondemand-plugin.pod  ondemand.c
plugins/pattern/: Makefile.am  nbdkit-pattern-plugin.pod  pattern.c
plugins/rust/: CHANGELOG.md  Cargo.lock.msrv  Cargo.toml  Cargo.toml.in  LICENSE  Makefile.am  README.md  nbdkit-rust-plugin.pod  test.sh
plugins/rust/examples/: ramdisk.rs
plugins/rust/src/: lib.rs
plugins/rust/tests/: bare_bones.rs  full_featured.rs
plugins/rust/tests/common/: mod.rs
scripts/: git.orderfile  vddk-esxi-open.sh.in  vddk-open.sh.in  vddk-vcenter-open.sh.in
server/: Makefile.am  backend.c  background.c  captive.c  cleanup.c  connections.c  crypto.c  debug-flags.c  debug.c  exports.c  extents.c  filters.c  fuzzer.c  internal.h  locks.c  log-stderr.c  log-syslog.c  log.c  main.c  nbdkit.pc.in  nbdkit.syms  options.h  plugins.c  protocol-handshake-newstyle.c  protocol-handshake-oldstyle.c  protocol-handshake.c  protocol.c  protocol.h  public.c  quit.c  signals.c  socket-activation.c  sockets.c  test-public.c  test-utils.c  threadlocal.c  usergroup.c  utils.c  vfprintf.c
server/local/: nbdkit.pc.in
src/: Makefile.am  cleanup.c  connections.c  crypto.c  errors.c  filters.c  internal.h  locks.c  log-stderr.c  log-syslog.c  log.c  main.c  nbdkit.pc.in  nbdkit.syms  options.h  plugins.c  protocol.h  sockets.c  test-utils.c  threadlocal.c  tls.c  utils.c
tests/: Makefile.am  README.tests  cc-shebang.c  cc_shebang.ml  dummy-vddk.c  functions.sh  functions.sh.in  generate-file-data.sh  generate-offset-data.sh  make-pki.sh  make-pki.sh.in  make-psk.sh  pycodestyle.sh  python-exception.py  python-export-list.py  python-export-name.py  python-thread-model.py  shebang.c  shebang.pl  shebang.py  shebang.rb  test-S3-unit.sh  test-S3.sh  test-ansi-c-plugin.c  test-ansi-c.sh  test-binary.sh  test-blkio.sh  test-block-size-constraints.sh  test-blocksize-default.sh  test-blocksize-error-policy.sh  test-blocksize-extents.sh  test-blocksize-policy.sh  test-blocksize-sharding.sh  test-blocksize-write-disconnect.sh  test-blocksize.sh  test-cache-block-size.sh  test-cache-max-size.sh  test-cache-on-read-caches.sh  test-cache-on-read.sh  test-cache-unaligned.sh  (+353 more)
tests/old-plugins/: README
tests/ssh/: sshd_config.in
tests/test-S3/boto3/: __init__.py
tests/test-S3/botocore/: exceptions.py
valgrind/: Makefile.am  ext2fs.suppressions  glibc.suppressions  gnutls.suppressions  nbdkit.suppressions  ocaml.suppressions  perl.suppressions  python.suppressions  sh.suppressions
(+420 files in other folders)
